# erp42_object_tracker

./: .gitignore  .gitmodules  README.md
erp42_object_tracker_node/: CMakeLists.txt  package.xml
erp42_object_tracker_node/config/: costmap_public.yaml  detector_private.yaml  detector_public.yaml  tracker_private.yaml  tracker_public.yaml
erp42_object_tracker_node/include/erp42_object_tracker_node/: costmap_node.hpp  detection_node.hpp  tracking_node.hpp
erp42_object_tracker_node/include/ihgp/: InfiniteHorizonGP.hpp  Matern32model.hpp
erp42_object_tracker_node/launch/: runTracker.launch
erp42_object_tracker_node/rviz/: detection_node.rviz
erp42_object_tracker_node/src/: costmap_node.cpp  detection_node.cpp  tracking_node.cpp  tracking_node_origin.cpp
erp42_object_tracker_node/src/ihgp/: InfiniteHorizonGP.cpp  Matern32model.cpp
lib/common_lib/include/common/: parameter.hpp
lib/common_lib/include/common/msgs/: autosense_msgs
lib/common_lib/include/common/types/: type.h
lib/roi_filters/include/roi_filters/: roi.hpp
lib/segmenters_lib/: README.md
lib/segmenters_lib/config/: detection.yaml
lib/segmenters_lib/config/kitti/: Segmenter.yaml
lib/segmenters_lib/rviz/: demo.rviz
lib/segmenters_lib/samples/: detection_node.cpp
